fix tablet landscape launch title wrap spacing

--- a/css/tablet_1024.css
+++ b/css/tablet_1024.css
@@ -23,7 +23,7 @@
 	  /*visibility: hidden;*/
 	}
 	div.foster-title-wrap {
-		margin: 70px 0 0 100px;
+		margin: 50px 0 0 50px;
 	}
 
 
